[gd_scene load_steps=5 format=3 uid="uid://eq5c8c4cmbrs"]

[ext_resource type="Script" path="res://scripts/settings.gd" id="1_xys7u"]
[ext_resource type="Texture2D" uid="uid://l74x5lppojjx" path="res://pictures/Firefly_2D_pixel_galaxy_88522.jpg" id="2_8bsc6"]
[ext_resource type="FontFile" uid="uid://cywa3is2xsm2x" path="res://fonts/Audex-Regular.ttf" id="2_jtts2"]
[ext_resource type="AudioStream" uid="uid://klnab3fn8uqn" path="res://audio/music/Menu.mp3" id="3_u06ri"]

[node name="Settings" type="Node"]
script = ExtResource("1_xys7u")

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource("2_8bsc6")
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0.129412, 0.129412, 0.129412, 0.713726)
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="."]
texture_filter = 1
offset_left = 849.0
offset_top = 71.0
offset_right = 1101.0
offset_bottom = 141.0
theme_override_fonts/font = ExtResource("2_jtts2")
theme_override_font_sizes/font_size = 60
text = "Settings"
metadata/_edit_use_anchors_ = true

[node name="FullScreen" type="CheckButton" parent="."]
texture_filter = 1
offset_left = 141.0
offset_top = 470.0
offset_right = 273.0
offset_bottom = 501.0
scale = Vector2(2, 2)
theme_override_fonts/font = ExtResource("2_jtts2")
text = "Fullscreen"
metadata/_edit_use_anchors_ = true

[node name="Resolution" type="GridContainer" parent="."]
offset_left = 141.0
offset_top = 199.0
offset_right = 372.0
offset_bottom = 271.0
scale = Vector2(2, 2)
theme_override_constants/v_separation = 10
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="Resolution"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("2_jtts2")
theme_override_font_sizes/font_size = 18
text = "Resolution"

[node name="OptionButton" type="OptionButton" parent="Resolution"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_jtts2")
theme_override_font_sizes/font_size = 15

[node name="Volume" type="GridContainer" parent="."]
offset_left = 141.0
offset_top = 665.0
offset_right = 994.0
offset_bottom = 735.0
theme_override_constants/h_separation = 20
columns = 2
metadata/_edit_use_anchors_ = true

[node name="MusicLabel" type="Label" parent="Volume"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("2_jtts2")
theme_override_font_sizes/font_size = 40
text = "Music"

[node name="MusicSlider" type="HSlider" parent="Volume"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.01
value = 1.0

[node name="SFXLabel" type="Label" parent="Volume"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("2_jtts2")
theme_override_font_sizes/font_size = 40
text = "SFX
"

[node name="SFXSlider" type="HSlider" parent="Volume"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.05
value = 1.0

[node name="Controls" type="GridContainer" parent="."]
offset_left = 1170.0
offset_top = 199.0
offset_right = 1717.0
offset_bottom = 696.0
theme_override_constants/v_separation = 20
columns = 2
metadata/_edit_use_anchors_ = true

[node name="Label3" type="Label" parent="Controls"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_jtts2")
theme_override_font_sizes/font_size = 40
text = "CONTROLS: "

[node name="Label4" type="Label" parent="Controls"]
layout_mode = 2

[node name="Label" type="Label" parent="Controls"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("2_jtts2")
theme_override_font_sizes/font_size = 30
text = "PAUSE"

[node name="Label2" type="Label" parent="Controls"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_jtts2")
theme_override_font_sizes/font_size = 30
text = "---            ESC"

[node name="Label5" type="Label" parent="Controls"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("2_jtts2")
theme_override_font_sizes/font_size = 30
text = "RESET"

[node name="Label6" type="Label" parent="Controls"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_jtts2")
theme_override_font_sizes/font_size = 30
text = "---            R"

[node name="Label7" type="Label" parent="Controls"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("2_jtts2")
theme_override_font_sizes/font_size = 30
text = "DASH"

[node name="Label8" type="Label" parent="Controls"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_jtts2")
theme_override_font_sizes/font_size = 30
text = "---            SHIFT"

[node name="Label9" type="Label" parent="Controls"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("2_jtts2")
theme_override_font_sizes/font_size = 30
text = "DOUBLE JUMP"

[node name="Label10" type="Label" parent="Controls"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_jtts2")
theme_override_font_sizes/font_size = 30
text = "---            2X SPACE"

[node name="Label11" type="Label" parent="Controls"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("2_jtts2")
theme_override_font_sizes/font_size = 30
text = "JUMP"

[node name="Label12" type="Label" parent="Controls"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_jtts2")
theme_override_font_sizes/font_size = 30
text = "---            SPACE"

[node name="Label13" type="Label" parent="Controls"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("2_jtts2")
theme_override_font_sizes/font_size = 30
text = "LEFT"

[node name="Label14" type="Label" parent="Controls"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_jtts2")
theme_override_font_sizes/font_size = 30
text = "---            A"

[node name="Label15" type="Label" parent="Controls"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("2_jtts2")
theme_override_font_sizes/font_size = 30
text = "RIGHT"

[node name="Label16" type="Label" parent="Controls"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_jtts2")
theme_override_font_sizes/font_size = 30
text = "---            D"

[node name="Main_menu_button" type="Button" parent="."]
texture_filter = 1
offset_left = 849.0
offset_top = 987.0
offset_right = 1048.0
offset_bottom = 1061.0
theme_override_fonts/font = ExtResource("2_jtts2")
theme_override_font_sizes/font_size = 40
text = "Main Menu"
metadata/_edit_use_anchors_ = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_u06ri")
volume_db = -20.0
autoplay = true
bus = &"Music"

[connection signal="toggled" from="FullScreen" to="." method="_on_full_screen_toggled"]
[connection signal="item_selected" from="Resolution/OptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="value_changed" from="Volume/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="Volume/SFXSlider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="pressed" from="Main_menu_button" to="." method="_on_main_menu_button_pressed"]
